--- a/GoIT/markup/lesson3/css/style.css
+++ b/GoIT/markup/lesson3/css/style.css
@@ -10,6 +10,11 @@ body{
 	margin: auto;
 	padding: 0 48px 0 46px;
 	width: 966px;
+	border-left: 1px solid #dbdbdb;
+	border-right: 1px solid #dbdbdb;
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(219,219,219,1);
+	-moz-box-shadow: 0px 0px 5px 0px rgba(219,219,219,1);
+	box-shadow: 0px 0px 5px 0px rgba(219,219,219,1);
 }
 
 
@@ -68,20 +73,25 @@ body{
 
 /* CONTENT */
 
-.sidebar{
+/* SIDEBAR */
+
+/*.sidebar{
 	position: relative;
 	overflow: hidden;
 }
-
-.sidebar_menu {
+*/
+.sidebar_menu{
 	float: left;
+}
+
+.sidebar_menu li{
+	width: 215px;
 }
 
 .sidebar_menu a{
 	display: block;
 	padding-left: 23px;
 	line-height: 38px;
-	width: 215px;
 	font-size: 14px;
 	color: #656363;
 	text-decoration: none;
@@ -90,17 +100,76 @@ body{
 	border-right: 1px solid #c8c8c8;
 } 
 
-.sideber_menu a:hover{
+.sidebar_menu a:hover{
+	padding-left: 35px;
 	background: #f9f9f9;
 	color: #2c2c2c;
-	text-decoration: overline;
 }
 
 .sidebar_menu:last-child{
 	border-bottom: 1px solid #c8c8c8;
 }
 
+/* ARTICLE */
+
+.article{
+	/*position: relative;*/
+	overflow: hidden;
+	/*float: right;*/
+	/*width: 675px;*/
+	padding-left: 48px;
+}
+
+.article_image{
+	height: 398px;
+	border: 1px solid #c8c8c8;
+	margin-bottom: 39px;
+}
+
+.article_image img{
+	display: block;
+	margin: auto;
+	padding: 40px 0;
+}
+
+.article p{
+	padding-left: 24px;
+	padding-right: 34px;
+	margin-bottom: 63px;
+	font-size: 14px;
+	color: #2c2c2c;
+	line-height: 21px;
+}
 
 /* FOOTER */
 
+.footer_menu{
+	position: relative;
+	overflow: hidden;
+	background: #e1e1e1;
+}
 
+.footer_menu li{
+	float: left;
+}
+
+.footer_menu a{
+	display: block;
+	line-height: 40px;
+	font-size: 14px;
+	color: #2c2c2c;
+	text-decoration: none;
+	padding: 0 51px;
+}
+
+.footer_menu a:hover{
+	text-decoration: underline;
+}
+
+.footer_menu li:last-child{
+	display: block;
+	float: right;
+	padding: 0 26px;
+	line-height: 40px;
+	font-size: 14px;
+}
