--- a/GoIT/markup/lesson4/css/style.css
+++ b/GoIT/markup/lesson4/css/style.css
@@ -67,12 +67,6 @@ body{
 	border-bottom: 1px #138aa7 solid;
 }
 
-.content ul{
-	-webkit-box-shadow: 0px 8px 10px -4px rgba(0,0,0,1);
-	-moz-box-shadow: 0px 8px 10px -4px rgba(0,0,0,1);
-	box-shadow: 0px 8px 10px -4px rgba(0,0,0,1);
-}
-
 .main_menu{
 	position: relative;
 	float:left;
@@ -89,6 +83,15 @@ body{
 	background: -ms-linear-gradient(top, rgba(55,55,55,1) 0%, rgba(48,48,48,1) 100%);
 	background: linear-gradient(to bottom, rgba(55,55,55,1) 0%, rgba(48,48,48,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#373737', endColorstr='#303030', GradientType=0 );
+	-webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+}
+
+.main_menu ul{
+	-webkit-box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.75);
 }
 
 .main_menu li{
@@ -106,11 +109,19 @@ body{
 	text-decoration: none;
 }
 
+.main_menu li a p{
+	display: inline-block;
+	padding-left: 8px;
+	font-size: 0.6em;
+	vertical-align:top;
+}
+
 .main_menu ul{
 	padding-top: 1px;
 	width: 100%;
-	list-style:none;
-	position:absolute;
+	list-style: none;
+	position: absolute;
+	overflow: hidden;
 	left:-9999px; /* Скрываем за экраном, когда не нужно (данный метод лучше, чем display:none;) */
 	opacity:0; /* Устанавливаем начальное состояние прозрачности */
 	/*-webkit-transition:0.25s linear opacity;*//* В Webkit выпадающие пункты будут проявляться */
@@ -120,7 +131,7 @@ body{
 	/*padding: 0 40px 0 10px;*/
 	display: block;
 	width: 100%;
-	float:none;
+	float: none;
 }
 
 .main_menu ul a{
@@ -137,17 +148,19 @@ body{
 	/*background:rgba(107,12,54,0.75);*/ /* Выглядит полупрозрачным */
 	/*text-decoration:none;*/
 }
+
 /*.main_menu li:hover ul a{
 	text-decoration:none;
 	-webkit-transition:-webkit-transform 0.075s linear;
 }*/
+
 .main_menu li:hover ul li a:hover{ /* Устанавливаем стили для выпадающих пунктов, когда курсор наводится на конкретный пункт */
 	display: block;
-	/*background:#333;*/
-	/*background:rgba(51,51,51,0.75);*//* Будет полупрозрачным */
-	/*text-decoration:underline;
-	-moz-transform:scale(1.05);
-	-webkit-transform:scale(1.05);*/
+	background: #404040;
+	/*background:rgba(251,251,251,0.75);*/ /* Будет полупрозрачным */
+	/*text-decoration:underline;*/
+	-moz-transform:scale(1.1);
+	-webkit-transform:scale(1.1);
 }
 
 .content_table{
@@ -156,6 +169,7 @@ body{
 	line-height: 24px;
 	text-align: center;
 	font-size: 14px;
+	color: #424c43;
 }
 
 .content_table p{
