--- a/GoIT/markup/lesson4extra/css/style.css
+++ b/GoIT/markup/lesson4extra/css/style.css
@@ -1,6 +1,6 @@
 body{
 	background: #0c739f url(../img/background.png) repeat-x;
-	font-family: Tahoma;
+	font-family: Tahoma, sans-serif;
 }
 
 .wrapper{
@@ -89,7 +89,16 @@ body{
 	background: -ms-linear-gradient(top, rgba(55,55,55,1) 0%, rgba(48,48,48,1) 100%);
 	background: linear-gradient(to bottom, rgba(55,55,55,1) 0%, rgba(48,48,48,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#373737', endColorstr='#303030', GradientType=0 );
+	-webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
 	z-index: 1;
+}
+
+.main_menu ul{
+	-webkit-box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.75);
 }
 
 .main_menu li{
@@ -107,14 +116,22 @@ body{
 	text-decoration: none;
 }
 
+.main_menu li a p{
+	display: inline-block;
+	padding-left: 8px;
+	font-size: 0.6em;
+	vertical-align:top;
+}
+
 .main_menu ul{
 	padding-top: 1px;
 	width: 100%;
 	list-style:none;
 	position:absolute;
+	overflow: hidden;
 	left:-9999px; /* Скрываем за экраном, когда не нужно (данный метод лучше, чем display:none;) */
 	opacity:0; /* Устанавливаем начальное состояние прозрачности */
-	/*-webkit-transition:0.25s linear opacity;*//* В Webkit выпадающие пункты будут проявляться */
+	-webkit-transition:0.25s linear opacity;/* В Webkit выпадающие пункты будут проявляться */
 }
 
 .main_menu ul li{
@@ -144,11 +161,11 @@ body{
 }*/
 .main_menu li:hover ul li a:hover{ /* Устанавливаем стили для выпадающих пунктов, когда курсор наводится на конкретный пункт */
 	display: block;
-	/*background:#333;*/
+	background:#404040;
 	/*background:rgba(51,51,51,0.75);*//* Будет полупрозрачным */
-	/*text-decoration:underline;
-	-moz-transform:scale(1.05);
-	-webkit-transform:scale(1.05);*/
+	/*text-decoration:underline;*/
+	-moz-transform:scale(1.1);
+	-webkit-transform:scale(1.1);
 }
 
 /*.content_table{
@@ -201,6 +218,7 @@ body{
 	line-height: 24px;
 	text-align: center;
 	font-size: 14px;
+	color: #424c43;
 }
 
 .bg_right p{
@@ -258,7 +276,7 @@ body{
 .column_3{
 	position: relative;
 	overflow: hidden;
-	float: left;
+	float: right;
 	width: 210px;
 	left: 790px;
 }
