--- a/GoIT/markup/lesson6/css/style.css
+++ b/GoIT/markup/lesson6/css/style.css
@@ -2,6 +2,12 @@ body{
 	background: #282828;
 }
 
+/* HEADER */
+
+header img, p, form{
+	display: inline;
+}
+
 header p{
 	width: 264px;
 	height: 17px;
@@ -12,11 +18,65 @@ header p{
 	line-height: 25px;
 }
 
-form{
+header .login_form{
 	width: 495px;
 	height: 26px;
 	background-color: #b1bcc0;
 	background-image: linear-gradient(180deg, #206988 0%, #114165 59%, #0c3256 100%);
 	border-radius: 4px;
 	box-shadow: 1.5px 2.6px 3px rgba(150, 150, 150, 0.75);
+}
+
+header .login_form input{
+	width: 115px;
+	height: 18px;
+	background-color: white;
+	border: 1px solid #9ba1a3;
+}
+
+header .site_map{
+	position: relative;
+	overflow: hidden;
+}
+
+header .site_map li{
+	float: left;
+}
+
+header .site_map a{
+	display: block;
+	background-image: url(../img/site_map.png);
+	height: 10px;
+}
+
+header .home{
+	width: 11px;
+}
+
+header .net{
+	width: 13px;
+	background-position: -13px 0;
+}
+
+header .letter{
+	width: 10px;
+	background-position: -28px 0;
+}
+
+
+/* END OF HEADER */
+
+/*.banner{
+	width: 909px;
+	height: 237px;
+}*/
+
+nav{
+	width: 912px;
+	height: 34px;
+	background-color: white;
+	background-image: linear-gradient(to top, black 0%, #576068 100%);
+	border: 1px solid #0d1642;
+	border-radius: 5px;
+	box-shadow: 1.5px 2.6px 5px rgba(0, 0, 0, 0.75);
 }
