--- a/GoIT/markup/lesson6/css/style.css
+++ b/GoIT/markup/lesson6/css/style.css
@@ -3,15 +3,16 @@ body{
 }
 
 .wrapper{
-	background: white;
+	margin: auto;
 	padding: 0 44px;
 	width: 912px;
+	background: white;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 /*.clearfix:after{
 	display: block;
-	content: '';
+	content: "";
 	clear: both;
 }*/
 
@@ -38,7 +39,7 @@ header p{
 	/*height: 17px;*/
 	margin-top: 3px;
 	color: #5e696d;
-	font-family: Arial;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 18px;
 	/*font-weight: 400;*/
 	line-height: 26px;
@@ -65,12 +66,19 @@ header .login_form input, header .login_form a, .login_form span{
 header .login_form input{
 	width: 115px;
 	height: 16px;
-	background-color: white;
 	border: 1px solid #9ba1a3;
+	background-color: white;
 	font-size: 11px;
 }
 
-header .login_form a, .login_form span{
+header .login_form .enter{
+	width: 39px;
+	height: 100%;
+	border: none;
+	background-color: transparent;
+}
+
+header .login_form a, .login_form span, .login_form .enter{
 	color: white;
 	text-decoration: none;
 	font-size: 11px;
@@ -81,6 +89,10 @@ header .login_form a:last-child{
 	color: #bfbfbf;
 	text-decoration: underline;
 }
+
+/*header .login_form a:hover{
+	cursor: default;
+}*/
 
 header .site_map{
 	float: right;
@@ -184,7 +196,7 @@ header .letter{
 }
 
 .main_menu .basket p{
-	font-family: Arial;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 11px;
 	color: #929b9f;
 }
@@ -198,8 +210,6 @@ header .letter{
 	font-size: 12px;
 	color: #0d5a8f;
 }
-
-/* END OF NAV */
 
 /* MAIN */
 
@@ -247,11 +257,6 @@ main{
 	border-radius: 14px;
 }
 
-/*.left_sidebar .left_menu>li p img{
-	margin: -3px 2px 0 4px;
-	vertical-align: middle;
-}*/
-
 .left_sidebar .inner_menu{
 	list-style: circle;
 	text-indent: -8px;
@@ -270,7 +275,7 @@ main{
 
 .left_sidebar a:hover{
 	text-decoration: underline;
-	font-family: Arial;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 14px;
 	font-weight: 700;
 	font-style: italic;
@@ -280,14 +285,204 @@ main{
 /* SECTION GOODS*/
 
 .goods{
-	position: relative;
-	overflow: hidden;
+	float: left;
 	width: 526px;
 	height: 627px;
 	background-image: linear-gradient(to top, rgba(35, 75, 93, 0.24) 0%, rgba(201, 207, 209, 0.24) 100%);
 	border-radius: 3px;
 }
 
-.goods figure{
+.goods a{
 	display: inline-block;
+	margin: 15px 5px 13px 23px;
+	text-align: center;
+	text-decoration: none;
+	cursor: default;
+}
+
+.goods a p{
+	display: block;
+	width: 136px;
+	line-height: 127px;
+	background-color: white;
+	border: 1px solid #a4aeb1;
+	border-radius: 7px;
+}
+
+.goods a p img{
+	vertical-align: middle;
+}
+
+.goods h2{
+	color: #206988;
+	font-size: 15px;
+}
+
+.goods h3{
+	color: #1f2528;
+	font-size: 13px;
+}
+
+.goods span{
+	color: #114165;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-weight: 700;
+	font-style: italic;
+	font-size: 16px;
+}
+
+.goods a span:last-child{
+	padding-left: 3px;
+	font-size: 12px;
+}
+
+.goods a:hover span{
+	color: red;
+}
+
+/* RIGHT SIDEBAR */
+
+.right_sidebar{
+	float: right;
+}
+
+.right_sidebar p{
+	line-height: 25px;
+	text-transform: uppercase;
+	font-size: 14px;
+	color: #0c3256;
+}
+
+.right_sidebar p img{
+	margin: -3px 2px 0 4px;
+	vertical-align: middle;
+}
+
+.right_sidebar>p{
+	margin-bottom: 14px;
+	width: 183px;
+	border: 1px solid #79878d;
+	border-radius: 13px;
+	box-shadow: 1.5px 2.6px 3px rgba(150, 150, 150, 0.75);
+	font-size: 13px;
+}
+
+.right_sidebar form p{
+	margin-bottom: 4px;
+	width: 150px;
+	line-height: 25px;
+	border: 1px solid #79878d;
+	border-radius: 14px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.right_sidebar form label{
+	margin-left: 10px;
+	display: block;
+	line-height: 25px;
+	font-size: 13px;
+	color: #465961;
+}
+
+.right_sidebar form label input{
+	margin: -1px 12px 0 0;
+    vertical-align: middle;
+}
+
+.right_sidebar form label:nth-child(4){
+	margin-bottom: 10px;
+}
+
+.right_sidebar form>input{
+	margin-top: 10px;
+	margin-left: 10px;
+	width: 80px;
+	height: 24px;
+	background-image: linear-gradient(180deg, #206988 0%, #114165 59%, #0c3256 100%);
+	border: 1px solid #a7abae;
+	border-radius: 10px;
+	-webkit-box-shadow: 2px 2px 3px 0px rgba(188,188,188,1);
+	-moz-box-shadow: 2px 2px 3px 0px rgba(188,188,188,1);
+	box-shadow: 2px 2px 3px 0px rgba(188,188,188,1);
+	text-transform: uppercase;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 11px;
+	color: #e5e9ea;
+}
+
+/* BOTTOM MENU */
+
+.bottom_menu{
+	clear: both;
+	margin: auto;
+	margin-bottom: 25px;
+	padding-top: 36px;
+	width: 80%;
+	text-align: center;
+}
+
+.bottom_menu a{
+	display: inline-block;
+	margin-left: 10px;
+	transition: linear 0.2s;
+}
+
+.bottom_menu a:hover{
+	-webkit-transform: scale(1.4);
+	-ms-transform: scale(1.4);
+	transform: scale(1.4);
+	cursor: default;
+}
+
+.bottom_menu a img{
+	vertical-align: middle;
+}
+
+/* FOOTER MENU */
+
+footer{
+	height: 101px;
+	background-color: #213a4d;
+	border: 1px solid #242a3c;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.footer_menu{
+	margin: auto;
+	padding-top: 12px;
+	padding-bottom: 16px;
+	width: 100%;
+	text-align: center;
+	font-size:0; /* убираем горизонтальные отступы */
+    line-height:0; /* ...и вертикальные в некоторых браузерах */
+    letter-spacing:-1px; /* переубеждаем webkit'ы */
+}
+
+.footer_menu li{
+	display: inline-block;
+	border-right: 1px #bec6c9 solid;
+	font-size:12px; /* Не забываем восстановить нормальные значения */
+    line-height:normal;
+    letter-spacing:normal;
+}
+
+.footer_menu li:last-child{
+	border-width: 0;
+}
+
+.footer_menu li a{
+	display: block;
+	padding: 0 11px;
+	text-decoration: none;
+	color: #bec6c9;
+}
+
+.footer_menu li a:hover{
+	color: #52abcb;
+}
+
+footer p{
+	font-size: 10px;
+	text-align: center;
+	color: #7f4740;
 }
