--- a/GoIT/markup/lesson6/css/style.css
+++ b/GoIT/markup/lesson6/css/style.css
@@ -23,7 +23,7 @@ header {
 	overflow: hidden;
 	/*margin-left: 2px;*/
 	padding-top: 17px;
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 }
 
 header .tel, header p, header form{
@@ -31,7 +31,7 @@ header .tel, header p, header form{
 }
 
 header .tel{
-	margin-top: 2px;
+	margin: 5px 3px 0 8px;
 }
 
 header p{
@@ -41,11 +41,13 @@ header p{
 	color: #5e696d;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 18px;
+	letter-spacing: 0.48px;
 	/*font-weight: 400;*/
 	line-height: 26px;
 }
 
 header .login_form{
+	margin: 1px 0 0 16px;
 	width: 495px;
 	height: 26px;
 	/*background-color: #b1bcc0;*/
@@ -54,28 +56,37 @@ header .login_form{
 	box-shadow: 1.5px 2.6px 3px rgba(150, 150, 150, 0.75);
 }
 
+header .login_form img, header .login_form input, header .login_form a, .login_form span{
+	display: inline-block;
+}
+
 header .login_form img{
-	margin-top: 5px;
-	margin-left: 3px;
+	margin-left: 6px;
+	vertical-align: middle;
 }
 
 header .login_form input, header .login_form a, .login_form span{
-	vertical-align: super;
+	/*vertical-align: super;*/
 }
 
 header .login_form input{
-	width: 115px;
-	height: 16px;
+	margin-right: 3px;
+	padding-left: 3px;
+	width: 108px;
 	border: 1px solid #9ba1a3;
+	border-radius: 2px;
 	background-color: white;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	font-size: 11px;
 }
 
 header .login_form .enter{
-	width: 39px;
-	height: 100%;
-	border: none;
-	background-color: transparent;
+    margin-left: -3px;
+    margin-right: -3px;
+	width: 30px;
+    height: 100%;
+    border: none;
+    background-color: transparent;
 }
 
 header .login_form a, .login_form span, .login_form .enter{
@@ -85,6 +96,7 @@ header .login_form a, .login_form span, .login_form .enter{
 }
 
 header .login_form a:last-child{
+	margin-left: 10px;
 	font-size: 12px;
 	color: #bfbfbf;
 	text-decoration: underline;
@@ -97,10 +109,9 @@ header .login_form a:last-child{
 header .site_map{
 	float: right;
 	margin-top: 2px;
-	display: inline-block;
-	width: 77px;
+	margin-right: 8px;
+	width: 75px;
 	height: 19px;
-	/*background-color: white;*/
 	border: 1px solid #bdc4c7;
 	border-radius: 12px;
 }
@@ -110,7 +121,8 @@ header .site_map li{
 }
 
 header .site_map a{
-	margin-left: 8px;
+	margin-bottom: 2px;
+	margin-left: 9px;
 	display: inline-block;
 	background-image: url(../img/site_map.png);
 	height: 10px;
@@ -133,8 +145,8 @@ header .letter{
 /* END OF HEADER */
 
 .banner{
-	margin-left: 2px;
-	margin-bottom: 6px;
+	margin-left: 1px;
+	margin-bottom: 5px;
 }
 
 /* NAV */
@@ -143,7 +155,7 @@ header .letter{
 	position: relative;
 	overflow: hidden;
 	margin-bottom: 10px;
-	height: 34px;
+	height: 32px;
 	background-image: linear-gradient(to top, black 0%, #576068 100%);
 	border: 1px solid #0d1642;
 	border-radius: 5px;
@@ -151,7 +163,7 @@ header .letter{
 }
 
 .main_menu ul{
-	margin-left: 125px;
+	margin-left: 126px;
 }
 
 .main_menu li{
@@ -160,10 +172,10 @@ header .letter{
 
 .main_menu a{
 	display: block;
-	margin-top: 4px;
-	padding: 0 20px;
+	margin-top: 3px;
+	padding: 0 17px 0 20px;
 	border-radius: 12px;
-	line-height: 24px;
+	line-height: 26px;
 	color: #b1bcc0;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -174,41 +186,66 @@ header .letter{
     transition: all 0.3s;
 }
 
+.main_menu li:nth-child(2) a{
+	padding: 0 16px;
+}
+
+.main_menu li:nth-child(3) a{
+	padding: 0 11px;
+}
+
+.main_menu li:nth-child(4) a{
+	padding: 0 16px;
+}
+
+.main_menu li:nth-child(5) a{
+	padding: 0 9px;
+}
+
 .main_menu a:hover{
 	background-image: linear-gradient(180deg, #206988 0%, #114165 59%, #0c3256 100%);
 	color: white;
 }
 
 .main_menu .basket{
-	display: table;
 	float: right;
-	margin-right: 13px;
-	line-height: 34px;
+	padding-right: 12px;
 }
 
 .main_menu .basket p{
-	display: table-cell;
-	vertical-align: middle;
-}
-
-.main_menu img{
-	padding-right: 6px;
-}
-
-.main_menu .basket p{
+	letter-spacing: 0.5px;
+	float: right;
+	line-height: 30px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 11px;
+	letter-spacing: 0.5px;
 	color: #929b9f;
 }
 
 .main_menu .basket .sum{
 	padding: 0 10px;
+    letter-spacing: 0.2px;
+}
+
+.main_menu .basket .price, .main_menu .basket .number{
+	padding-top: 1px;
+	/*letter-spacing: 0.5px;*/
+	font-size: 12px;
+	color: #0d5a8f;
 }
 
 .main_menu .basket .number{
-	padding-top: 1px;
-	font-size: 12px;
-	color: #0d5a8f;
+	padding-right: 4px;
+}
+
+.main_menu .basket .items{
+	padding-right: 1px;
+    letter-spacing: 0.2px;
+}
+
+.main_menu img{
+	float: right;
+	margin: 7px 6px 0px 0px;
 }
 
 /* MAIN */
