--- a/GoIT/markup/lesson6/css/style.css
+++ b/GoIT/markup/lesson6/css/style.css
@@ -47,7 +47,7 @@ header p{
 }
 
 header .login_form{
-	margin: 1px 0 0 16px;
+	margin: 1px 0px 0 15px;
 	width: 495px;
 	height: 26px;
 	/*background-color: #b1bcc0;*/
@@ -57,12 +57,13 @@ header .login_form{
 }
 
 header .login_form img, header .login_form input, header .login_form a, .login_form span{
-	display: inline-block;
+	display: block;
+	float: left;
 }
 
 header .login_form img{
-	margin-left: 6px;
-	vertical-align: middle;
+	margin-left: 7px;
+	margin-top: 4px;
 }
 
 header .login_form input, header .login_form a, .login_form span{
@@ -70,36 +71,45 @@ header .login_form input, header .login_form a, .login_form span{
 }
 
 header .login_form input{
-	margin-right: 3px;
-	padding-left: 3px;
-	width: 108px;
+	padding-left: 5px;
 	border: 1px solid #9ba1a3;
 	border-radius: 2px;
 	background-color: white;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	font-size: 11px;
+	height: 14px;
+	margin: 3px 4px 0 3px;
+	width: 107px;
 }
 
 header .login_form .enter{
-    margin-left: -3px;
-    margin-right: -3px;
-	width: 30px;
+	width: 31px;
     height: 100%;
     border: none;
     background-color: transparent;
+    padding-right: 0px;
+    margin: -1px 3px 0px 0px;
+}
+
+
+header .login_form span{
+	margin: 7px 3px 0 0;
 }
 
 header .login_form a, .login_form span, .login_form .enter{
 	color: white;
 	text-decoration: none;
 	font-size: 11px;
+	margin: 7px 0 0 0;
+	letter-spacing: -0.3px;
 }
 
 header .login_form a:last-child{
-	margin-left: 10px;
 	font-size: 12px;
 	color: #bfbfbf;
 	text-decoration: underline;
+	margin: 6px 0 0 22px;
+	letter-spacing: -0.1px;
 }
 
 /*header .login_form a:hover{
@@ -121,7 +131,7 @@ header .site_map li{
 }
 
 header .site_map a{
-	margin-bottom: 2px;
+	margin-bottom: 0px;
 	margin-left: 9px;
 	display: inline-block;
 	background-image: url(../img/site_map.png);
@@ -187,7 +197,7 @@ header .letter{
 }
 
 .main_menu li:nth-child(2) a{
-	padding: 0 16px;
+	padding: 0 17px;
 }
 
 .main_menu li:nth-child(3) a{
@@ -215,7 +225,7 @@ header .letter{
 .main_menu .basket p{
 	letter-spacing: 0.5px;
 	float: right;
-	line-height: 30px;
+	line-height: 31px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 11px;
 	letter-spacing: 0.5px;
@@ -225,10 +235,10 @@ header .letter{
 .main_menu .basket .sum{
 	padding: 0 10px;
     letter-spacing: 0.2px;
+    margin-top: -2px;
 }
 
 .main_menu .basket .price, .main_menu .basket .number{
-	padding-top: 1px;
 	/*letter-spacing: 0.5px;*/
 	font-size: 12px;
 	color: #0d5a8f;
@@ -239,13 +249,14 @@ header .letter{
 }
 
 .main_menu .basket .items{
-	padding-right: 1px;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.3px;
+    padding-right: 2px;
+    margin-top: -2px;
 }
 
 .main_menu img{
 	float: right;
-	margin: 7px 6px 0px 0px;
+	margin: 5px 7px 0px 0px;
 }
 
 /* MAIN */
@@ -260,7 +271,7 @@ main{
 
 .left_sidebar{
 	float: left;
-	margin-right: 8px;
+	margin-right: 9px;
 }
 
 .left_sidebar p{
@@ -270,17 +281,18 @@ main{
 }
 
 .left_sidebar>p{
-	margin-bottom: 14px;
-	width: 183px;
+	margin-bottom: 13px;
+	width: 181px;
 	line-height: 25px;
 	border: 1px solid #79878d;
 	border-radius: 13px;
 	box-shadow: 1.5px 2.6px 3px rgba(150, 150, 150, 0.75);
 	font-size: 13px;
+	letter-spacing: -0.2px;
 }
 
-.left_sidebar p img{
-	margin: -3px 2px 0 4px;
+.left_sidebar>p img{
+	margin: -3px 4px 0 2px;
 	vertical-align: middle;
 }
 
@@ -289,18 +301,25 @@ main{
 }
 
 .left_sidebar .left_menu>li p{
-	width: 150px;
 	border: 1px solid #79878d;
 	border-radius: 14px;
+	margin-left: 1px;
+	width: 150px;;;;;
+}
+
+.left_sidebar .left_menu>li p img{
+	margin: -1px 2px 0px 5px;
+	vertical-align: middle;;;
 }
 
 .left_sidebar .inner_menu{
 	list-style: circle;
-	text-indent: -8px;
+	text-indent: -7px;
 }
 
 .left_sidebar .inner_menu li{
-	margin-left: 35px;
+	margin-left: 57px;
+	line-height: 24px;
 }
 
 .left_sidebar a{
@@ -308,6 +327,7 @@ main{
 	text-decoration: none;
 	font-size: 13px;
 	color: #465961;
+	letter-spacing: -0.3px;
 }
 
 .left_sidebar a:hover{
@@ -322,16 +342,16 @@ main{
 /* SECTION GOODS*/
 
 .goods{
-	float: left;
 	width: 526px;
 	height: 627px;
 	background-image: linear-gradient(to top, rgba(35, 75, 93, 0.24) 0%, rgba(201, 207, 209, 0.24) 100%);
 	border-radius: 3px;
+	float: left;
 }
 
 .goods a{
 	display: inline-block;
-	margin: 15px 5px 13px 23px;
+	margin: 12px 1px 13px 23px;
 	text-align: center;
 	text-decoration: none;
 	cursor: default;
@@ -344,6 +364,7 @@ main{
 	background-color: white;
 	border: 1px solid #a4aeb1;
 	border-radius: 7px;
+	margin-bottom: 4px;
 }
 
 .goods a p img{
@@ -352,12 +373,14 @@ main{
 
 .goods h2{
 	color: #206988;
-	font-size: 15px;
+	font-size: 15px;;
 }
 
 .goods h3{
 	color: #1f2528;
 	font-size: 13px;
+	margin-left: 3px;
+	letter-spacing: -0.2px;
 }
 
 .goods span{
@@ -366,11 +389,15 @@ main{
 	font-weight: 700;
 	font-style: italic;
 	font-size: 16px;
+	margin-left: 11px;
+	letter-spacing: 0.3px;
+	transition: linear 0.2s;
 }
 
 .goods a span:last-child{
-	padding-left: 3px;
 	font-size: 12px;
+	padding-left: 0px;
+	margin-left: 6px;
 }
 
 .goods a:hover span{
@@ -381,6 +408,7 @@ main{
 
 .right_sidebar{
 	float: right;
+	margin-right: 3px;
 }
 
 .right_sidebar p{
@@ -391,30 +419,32 @@ main{
 }
 
 .right_sidebar p img{
-	margin: -3px 2px 0 4px;
+	margin: -4px 5px 0 3px;
 	vertical-align: middle;
 }
 
 .right_sidebar>p{
 	margin-bottom: 14px;
-	width: 183px;
+	width: 180px;
 	border: 1px solid #79878d;
 	border-radius: 13px;
 	box-shadow: 1.5px 2.6px 3px rgba(150, 150, 150, 0.75);
 	font-size: 13px;
+	line-height: 23px;
+	letter-spacing: 0.8px;
 }
 
 .right_sidebar form p{
-	margin-bottom: 4px;
-	width: 150px;
-	line-height: 25px;
+	width: 136px;
+	line-height: 26px;
 	border: 1px solid #79878d;
 	border-radius: 14px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	margin: 0px 0 4px 14px;
 }
 
 .right_sidebar form label{
-	margin-left: 10px;
+	margin-left: 24px;
 	display: block;
 	line-height: 25px;
 	font-size: 13px;
@@ -427,14 +457,14 @@ main{
 }
 
 .right_sidebar form label:nth-child(4){
-	margin-bottom: 10px;
+	margin-bottom: 7px;
 }
 
 .right_sidebar form>input{
-	margin-top: 10px;
-	margin-left: 10px;
+	margin-top: 15px;
+	margin-left: 25px;
 	width: 80px;
-	height: 24px;
+	height: 26px;
 	background-image: linear-gradient(180deg, #206988 0%, #114165 59%, #0c3256 100%);
 	border: 1px solid #a7abae;
 	border-radius: 10px;
@@ -452,15 +482,14 @@ main{
 .bottom_menu{
 	clear: both;
 	margin: auto;
-	margin-bottom: 25px;
+	margin-bottom: 24px;
 	padding-top: 36px;
-	width: 80%;
 	text-align: center;
 }
 
 .bottom_menu a{
 	display: inline-block;
-	margin-left: 10px;
+	margin-left: 8px;
 	transition: linear 0.2s;
 }
 
@@ -478,33 +507,34 @@ main{
 /* FOOTER MENU */
 
 footer{
-	height: 101px;
+	height: 98px;
 	background-color: #213a4d;
 	border: 1px solid #242a3c;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	width: 908px;
+	margin-left: 1px;
 }
 
 .footer_menu{
-	margin: auto;
 	padding-top: 12px;
-	padding-bottom: 16px;
-	width: 100%;
-	text-align: center;
-	font-size:0; /* убираем горизонтальные отступы */
+	padding-bottom: 17px; /* убираем горизонтальные отступы */
     line-height:0; /* ...и вертикальные в некоторых браузерах */
-    letter-spacing:-1px; /* переубеждаем webkit'ы */
+    letter-spacing:-1px;
+	font-size:0;
+	margin-left:297px; /* переубеждаем webkit'ы */
 }
 
 .footer_menu li{
 	display: inline-block;
 	border-right: 1px #bec6c9 solid;
-	font-size:12px; /* Не забываем восстановить нормальные значения */
-    line-height:normal;
-    letter-spacing:normal;
+	font-size:12px;
+	line-height:10px;
+	letter-spacing:0.5px; /* Не забываем восстановить нормальные значения */
 }
 
 .footer_menu li:last-child{
 	border-width: 0;
+	padding-left: 6px;
 }
 
 .footer_menu li a{
@@ -523,3 +553,5 @@ footer p{
 	text-align: center;
 	color: #7f4740;
 }
+
+
