--- a/GoIT/markup/lesson6/css/style.css
+++ b/GoIT/markup/lesson6/css/style.css
@@ -10,11 +10,11 @@ body{
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
-/*.clearfix:after{
+.clearfix:after{
 	display: block;
 	content: "";
 	clear: both;
-}*/
+}
 
 /* HEADER */
 
@@ -31,7 +31,7 @@ header .tel, header p, header form{
 }
 
 header .tel{
-	margin: 5px 3px 0 8px;
+	margin: 5px 3px 0 9px;
 }
 
 header p{
@@ -155,8 +155,8 @@ header .letter{
 /* END OF HEADER */
 
 .banner{
-	margin-left: 1px;
-	margin-bottom: 5px;
+	margin-bottom: 3px;
+	margin-left: 2px;
 }
 
 /* NAV */
@@ -170,6 +170,7 @@ header .letter{
 	border: 1px solid #0d1642;
 	border-radius: 5px;
 	box-shadow: 1.5px 2.6px 5px rgba(0, 0, 0, 0.75);
+	margin-left: 1px;
 }
 
 .main_menu ul{
@@ -182,7 +183,7 @@ header .letter{
 
 .main_menu a{
 	display: block;
-	margin-top: 3px;
+	margin-top: 4px;
 	padding: 0 17px 0 20px;
 	border-radius: 12px;
 	line-height: 26px;
@@ -235,7 +236,6 @@ header .letter{
 .main_menu .basket .sum{
 	padding: 0 10px;
     letter-spacing: 0.2px;
-    margin-top: -2px;
 }
 
 .main_menu .basket .price, .main_menu .basket .number{
@@ -251,12 +251,11 @@ header .letter{
 .main_menu .basket .items{
     letter-spacing: 0.3px;
     padding-right: 2px;
-    margin-top: -2px;
 }
 
 .main_menu img{
 	float: right;
-	margin: 5px 7px 0px 0px;
+	margin: 7px 7px 0px 0px;
 }
 
 /* MAIN */
@@ -265,6 +264,179 @@ main{
 	position: relative;
 	overflow: hidden;
 	margin-top: 12px;
+}
+
+/* SEARCHER*/
+
+.searcher{
+	margin-bottom: 18px;
+}
+
+.searcher form{
+	position: relative;
+	float: left;
+	margin: 0 8px 0 6px;
+}
+
+/* SEARCH AUTO FORM */
+
+.searcher .search_auto{
+	width: 413px;
+	height: 132px;
+	border: 1px solid #9c9c9d;
+	border-radius: 17px;
+	box-shadow: 2.6px 4.3px 5px rgba(104, 104, 104, 0.75);
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.search_auto .rims{
+	float: left;
+	margin: 4px 0 0 17px;
+	width: 185px;
+}
+
+.search_auto h2{
+	position: absolute;
+	left: 125px;
+	color: #154467;
+	font-size: 12px;
+	font-weight: 900;
+	top: 1px;
+	letter-spacing: 0.4px;
+}
+
+.search_auto legend{
+	margin-bottom: 12px;
+	color: #154468;
+	font-size: 10px;
+	font-weight: 900;
+	margin-left: 3px;
+	letter-spacing: 0.5px;
+}
+
+.search_auto dt{
+	color: black;
+	font-size: 10px;;
+}
+
+.search_auto p, .search_auto span{
+	color: #77858b;
+	font-size: 8px;
+}
+
+.search_auto span{
+	padding-left: 1px;
+}
+
+.search_auto dd{
+	position: absolute;
+	left: 93px;
+	/*margin: 0px 0 0 0px;*/
+}
+
+.search_auto select{
+	width: 102px;
+	/*float: right;*/;
+	/*float: right;*/
+}
+
+.search_auto .dt_auto_name{
+	margin-bottom: 6px;
+	letter-spacing: 0.5px;
+}
+
+.search_auto .dt_auto_model{
+	margin-bottom: 4px;
+}
+
+.search_auto .dt_auto_year{
+	margin-bottom: 8px;
+}
+
+.search_auto .auto_name{
+	top: 20px;
+}
+
+.search_auto .auto_model{
+	top: 42px;
+}
+
+.search_auto .auto_year{
+	top: 64px;
+}
+
+.search_auto .auto_year select{
+	width: 57px;
+}
+
+.search_auto .auto_options{
+	top: 86px;
+}
+
+.search_auto .tires{
+	float: left;
+	margin: 2px 0 0 20px;
+	width: 185px;
+}
+
+.search_auto .tires legend{
+	margin: 0 0px 12px 132px;
+	letter-spacing: 0.4px;
+}
+
+.search_auto .tires dd{
+	position: absolute;
+	left: 298px;
+	/*margin: 0px 0 0 0px;*/
+}
+
+.search_auto .tires .auto_name{
+	top: 18px;
+}
+
+.search_auto .tires .auto_model{
+	top: 40px;
+}
+
+.search_auto .tires .auto_year{
+	top: 62px;
+}
+
+.search_auto .tires .auto_options{
+	top: 84px;
+}
+
+.search_auto input{
+	float: right;
+	margin: 8px 14px 0 0;
+	border: none;
+	background-color: white;
+	text-decoration: underline;
+	font-style: italic;
+	font-size: 14px;
+	color: #154467;
+}
+
+/* END OF SEARCH AUTO FORM */
+
+
+
+
+.searcher .search_tires{
+	width: 191px;
+	height: 133px;
+	border: 1px solid #9c9c9d;
+	border-radius: 17px;
+	box-shadow: 2.6px 4.3px 5px rgba(150, 150, 150, 0.75);
+	margin-right: 3px;
+}
+
+.searcher .search_rims{
+	width: 265px;
+	height: 132px;
+	border: 1px solid #9c9c9d;
+	border-radius: 14px;
+	box-shadow: 2.6px 4.3px 5px rgba(150, 150, 150, 0.75);
 }
 
 /* LEFT SIDEBAR */
@@ -314,12 +486,12 @@ main{
 
 .left_sidebar .inner_menu{
 	list-style: circle;
-	text-indent: -7px;
+	text-indent: -7px;;;
 }
 
 .left_sidebar .inner_menu li{
-	margin-left: 57px;
 	line-height: 24px;
+	margin-left: 57px;
 }
 
 .left_sidebar a{
@@ -327,16 +499,16 @@ main{
 	text-decoration: none;
 	font-size: 13px;
 	color: #465961;
-	letter-spacing: -0.3px;
+	letter-spacing: -0.3px;;
 }
 
 .left_sidebar a:hover{
-	text-decoration: underline;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 14px;
 	font-weight: 700;
 	font-style: italic;
 	color: #0c3256;
+	text-decoration: underline;
 }
 
 /* SECTION GOODS*/
@@ -553,5 +725,3 @@ footer p{
 	text-align: center;
 	color: #7f4740;
 }
-
-
