--- a/GoIT/markup/lesson5/Mondrian Red, Blue, Yellow/css/style.css
+++ b/GoIT/markup/lesson5/Mondrian Red, Blue, Yellow/css/style.css
@@ -26,7 +26,7 @@ td[colspan="4"]{
 	width: 200px;
 }
 
-td[rowspan="2"]{
+/*td[rowspan="2"]{
 	height: 100px;
 }
 
@@ -36,7 +36,7 @@ td[rowspan="3"]{
 
 td[rowspan="4"]{
 	height: 200px;
-}
+}*/
 
 /* COLORS*/
 
