--- a/GoIT/markup/lesson6/css/style.css
+++ b/GoIT/markup/lesson6/css/style.css
@@ -131,25 +131,27 @@ header .site_map li{
 }
 
 header .site_map a{
-	margin-bottom: 0px;
-	margin-left: 9px;
-	display: inline-block;
 	background-image: url(../img/site_map.png);
 	height: 10px;
+	display: inline-block;
 }
 
 header .home{
 	width: 11px;
+	margin-left: 9px;
 }
 
 header .net{
 	width: 13px;
 	background-position: -13px 0;
+	margin-left: 8px;
+	margin-bottom: -1px;
 }
 
 header .letter{
 	width: 10px;
 	background-position: -28px 0;
+	margin-left: 11px;
 }
 
 /* END OF HEADER */
@@ -263,24 +265,41 @@ header .letter{
 main{
 	position: relative;
 	overflow: hidden;
-	margin-top: 12px;
+	margin-top: 10px;
 }
 
 /* SEARCHER*/
 
 .searcher{
 	margin-bottom: 18px;
+	padding-top: 2px;
 }
 
 .searcher form{
 	position: relative;
 	float: left;
-	margin: 0 8px 0 6px;
+}
+
+.searcher .input_submit{
+	border: none;
+	background-color: white;
+	text-decoration: underline;
+	font-style: italic;
+	font-size: 14px;
+	color: #154467;
+	right: 14px;
+	bottom: 8px;
+	position: absolute;
+}
+
+.searcher select{
+	background: url(../img/select_arrow.png) center right no-repeat;
 }
 
 /* SEARCH AUTO FORM */
 
 .searcher .search_auto{
+	margin: 0 8px 0 6px;
 	width: 413px;
 	height: 132px;
 	border: 1px solid #9c9c9d;
@@ -336,6 +355,10 @@ main{
 
 .search_auto select{
 	width: 102px;
+	box-shadow: inset 0.5px 0.9px 1px rgba(0, 0, 0, 0.75);
+	height: 18px;
+	border-bottom: none;;
+	/*float: right;*/;
 	/*float: right;*/;
 	/*float: right;*/
 }
@@ -406,34 +429,105 @@ main{
 	top: 84px;
 }
 
-.search_auto input{
-	float: right;
-	margin: 8px 14px 0 0;
-	border: none;
-	background-color: white;
-	text-decoration: underline;
-	font-style: italic;
-	font-size: 14px;
-	color: #154467;
-}
-
 /* END OF SEARCH AUTO FORM */
 
-
-
+/* SEARCH TIRES FORM */
 
 .searcher .search_tires{
+	margin: -1px 0px 0 6px;
 	width: 191px;
-	height: 133px;
+	height: 134px;
 	border: 1px solid #9c9c9d;
 	border-radius: 17px;
 	box-shadow: 2.6px 4.3px 5px rgba(150, 150, 150, 0.75);
 	margin-right: 3px;
 }
 
+.search_tires h2{
+	position: absolute;
+	left: 10px;
+	top: 3px;
+	color: #114165;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 12px;
+	font-weight: 900;
+}
+
+.search_tires>ul{
+	margin-top: 29px;
+	margin-left: 13px;
+}
+
+.search_tires p{
+	float: left;
+	font-size: 10px;
+}
+
+.search_tires .p_tire_radial{
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 11px;
+	margin: 12px 0 0 32px;
+}
+
+.search_tires .p_slash{
+	margin: -4px 0px 0 6px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 14px;
+}
+
+.search_tires select{
+	float: left;
+	height: 17px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 11px;;
+}
+
+.search_tires .tire_size{
+	margin: -7px 0px 0 8px;
+	width: 50px;;
+}
+
+.search_tires .tire_radial{
+	margin: 7px 0 0 7px;
+	width: 45px;
+}
+
+.search_tires .p_season{
+	margin: 5px 0px 0 1px;
+}
+
+.search_tires .season_box{
+	float: right;
+	margin: 6px 82px 0 0px;
+}
+
+.search_tires label{
+	font-size: 12px;
+	display: block;
+	margin-bottom: 1px;
+}
+
+.search_tires input[type="checkbox"]{
+	margin: -1px 2px 0px 0;
+	vertical-align: middle;
+	width: 10px;
+	height: 10px;
+}
+
+
+
+
+
+
+
+/* END OF SEARCH TIRES FORM */
+
+
+
 .searcher .search_rims{
-	width: 265px;
-	height: 132px;
+	margin: -2px 0px 0px 7px;
+	width: 266px;
+	height: 134px;
 	border: 1px solid #9c9c9d;
 	border-radius: 14px;
 	box-shadow: 2.6px 4.3px 5px rgba(150, 150, 150, 0.75);
@@ -469,28 +563,28 @@ main{
 }
 
 .left_sidebar .left_menu li{
-	line-height: 26px;
 }
 
 .left_sidebar .left_menu>li p{
 	border: 1px solid #79878d;
-	border-radius: 14px;
+	border-radius: 12px;
+	line-height: 26px;
 	margin-left: 1px;
-	width: 150px;;;;;
+	width: 150px;
 }
 
 .left_sidebar .left_menu>li p img{
 	margin: -1px 2px 0px 5px;
-	vertical-align: middle;;;
+	vertical-align: middle;
 }
 
 .left_sidebar .inner_menu{
 	list-style: circle;
-	text-indent: -7px;;;
+	text-indent: -7px;
 }
 
 .left_sidebar .inner_menu li{
-	line-height: 24px;
+	line-height: 23px;
 	margin-left: 57px;
 }
 
@@ -499,7 +593,7 @@ main{
 	text-decoration: none;
 	font-size: 13px;
 	color: #465961;
-	letter-spacing: -0.3px;;
+	letter-spacing: -0.3px;
 }
 
 .left_sidebar a:hover{
@@ -610,7 +704,7 @@ main{
 	width: 136px;
 	line-height: 26px;
 	border: 1px solid #79878d;
-	border-radius: 14px;
+	border-radius: 12px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	margin: 0px 0 4px 14px;
 }
@@ -625,7 +719,9 @@ main{
 
 .right_sidebar form label input{
 	margin: -1px 12px 0 0;
-    vertical-align: middle;
+	vertical-align: middle;
+	height: 11px;
+	width: 11px;
 }
 
 .right_sidebar form label:nth-child(4){
