Продолжаем работу с ДЗ№7

--- a/GoIT/markup/lesson6/css/style.css
+++ b/GoIT/markup/lesson6/css/style.css
@@ -620,7 +620,7 @@ main{
 	margin: 12px 1px 13px 23px;
 	text-align: center;
 	text-decoration: none;
-	cursor: default;
+	/*cursor: default;*/
 }
 
 .goods a p{
