--- a/GoIT/markup/lesson7-8/css/style.css
+++ b/GoIT/markup/lesson7-8/css/style.css
@@ -120,22 +120,33 @@ html, body{
 	background: rgba(0,0,0,0.2);
 }
 
-.slider__arrow{
-	display: block;
+.slider__wrapper{
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1550px;
 }
 
-.slider__arrow--left{
-	position: absolute;
-	top: 183px;
-	left: 16.666667%;
+.slider__arrow{
+	display: block;
+	margin-top: 190px;
+	width: 24px;
+	height: 35px;
+}
 
-	
+.slider__arrow:hover{
+	-ms-background-position-y: -40px;
+	background-position-y: -40px;
+}	
+
+.slider__arrow--left{
+	float: left;
+	background: url(../img/icons.png) -3px -3px no-repeat;
 }
 
 .slider__arrow--right{
 	float: right;
+	background: url(../img/icons.png) -28px -3px no-repeat;
 }
-
 
 .heading1{
 	color: #fefefe;
@@ -177,4 +188,49 @@ html, body{
 	margin-top: -20px;
 	margin-right: 7.8125%;
 }
+
+.menu__slider{
+	clear: both;
+    padding-top: 80px;
+    margin-right: 18%;
+}
+
+.menu__circles{
+	display: block;
+}
+
+.menu__circles--slider{
+	width: 17px;
+	height: 17px;
+	background: url(../img/icons.png) -56px -1px no-repeat;
+}
+
+.menu__circles--slider:hover{
+	-ms-background-position-x: -78px;
+	background-position-x: -78px;
+}
+
 /* END OF HEADER */
+
+/* MAIN */
+
+/* VIOLET BLOCK*/
+
+.violet_block{
+	position: relative;
+	height: 340px;
+	background: rgba(116,80,131,1);
+	background: -moz-linear-gradient(top, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(116,80,131,1)), color-stop(100%, rgba(50,37,57,1)));
+	background: -webkit-linear-gradient(top, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
+	background: -o-linear-gradient(top, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
+	background: -ms-linear-gradient(top, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
+	background: linear-gradient(to bottom, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#745083', endColorstr='#322539', GradientType=0 );
+}
+
+
+
+.menu__circles--article{
+
+}
